fixed spacing on .options css class

--- a/tab renamer/interface/style.css
+++ b/tab renamer/interface/style.css
@@ -26,7 +26,7 @@ body {
 .options {
     display: flex;
     flex-direction: row;
-    gap: 10px;
+    justify-content: space-between;
     margin-bottom: 10px;
 }
 
